tested add.recipe for bugs and made it more respoive by making columns full width on tablet devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -201,6 +201,10 @@ hr {
     text-align: end;
 }
 
-
-
-
+.btn-bottom {
+    margin-bottom: 30px;
+    margin-top: 15px;
+    background: #bf5d1d;
+    border: #bc9982;
+}
+}
